--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2005-08-24  Matthias Clasen  <mclasen@redhat.com>
 
+	* NEWS: Updates
+
 	* gtk/gtksettings.c (gtk_settings_get_for_screen): Make sure font
 	and cursor settings get propagated down to the screen initially.
 	Pointed out by Frederic Crozat.
