--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-08-25  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtktoolbar.c (_gtk_toolbar_elide_underscores): Handle
+	NULL gracefully.  (#314523, Ed Catmur)
+
 2005-08-25  Owen Taylor  <otaylor@redhat.com>
  
  	* gdk/x11/gdkcursor-x11.c (gdk_x11_display_set_cursor_theme): 
