--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-08-26  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkcalendar.c (gtk_calendar_init): Fix the calculation
+	of week_start.  (#314473, JP Rosevaar)
+
 2005-08-25  Thomas Fitzsimmons  <fitzsim@redhat.com>
 
 	* gtk/gtkfilesystemmodel.c (idle_finished_loading_cb): Acquire GDK
