--- a/docs/reference/ChangeLog
+++ b/docs/reference/ChangeLog
@@ -1,5 +1,10 @@
 2005-08-26  Matthias Clasen  <mclasen@redhat.com>
 
+	* gdk-pixbuf/gdk-pixbuf.sgml: 
+	* gdk/gdk-docs.sgml: 
+	* gtk/gtk-docs.sgml: Add indices for new
+	symbols in 2.10
+
 	* gdk/gdk-sections.txt: Add font options
 	API.
 
