--- a/docs/reference/gtk/gtk-update-icon-cache.1
+++ b/docs/reference/gtk/gtk-update-icon-cache.1
@@ -2,7 +2,7 @@
 .\" It was generated using the DocBook XSL Stylesheets (version 1.69.1).
 .\" Instead of manually editing it, you probably should edit the DocBook XML
 .\" source for it and then use the DocBook XSL Stylesheets to regenerate it.
-.TH "GTK\-UPDATE\-ICON\-CACH" "1" "08/23/2005" "" ""
+.TH "GTK\-UPDATE\-ICON\-CACH" "1" "08/26/2005" "" ""
 .\" disable hyphenation
 .nh
 .\" disable justification (adjust text to left margin only)
@@ -11,7 +11,7 @@
 gtk\-update\-icon\-cache \- Icon theme caching utility
 .SH "SYNOPSIS"
 .HP 22
-\fBgtk\-update\-icon\-cache\fR [\-\-force] [\-\-index\-only] [\-\-quiet] {iconpath}
+\fBgtk\-update\-icon\-cache\fR [\-\-force] [\-\-index\-only] [\-\-ignore\-theme\-index] [\-\-quiet] {iconpath}
 .SH "DESCRIPTION"
 .PP
 \fBgtk\-update\-icon\-cache\fR
@@ -30,6 +30,11 @@ to avoid a lot of system call and disk seek overhead when the application starts
 .TP
 \-\-force, \-f
 Overwrite an existing cache file even if it appears to be uptodate.
+.TP
+\-\-ignore\-theme\-index, \-t
+Don't check for the existence of 'index.theme' in the icon theme directory. Without this option,
+\fBgtk\-update\-icon\-cache\fR
+refuses to create an icon cache in a directory which does not appear to be the toplevel directory of an icon theme.
 .TP
 \-\-index\-only, \-i
 Don't include image data in the cache.
