--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-08-26  Matthias Clasen  <mclasen@redhat.com>
 
+	* gtk/updateiconcache.c: Add a separate --ignore-theme-index option
+	to avoid overloading --force.  (JP Rosevaar)
+
+2005-08-26  Matthias Clasen  <mclasen@redhat.com>
+
 	* configure.in: Bump version to 2.9.0
 
 	* gdk/gdk.symbols: 
