--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-08-27  Matthias Clasen  <mclasen@redhat.com>
+
+	* gdk/x11/gdkproperty-x11.c (gdk_property_get): Don't warn
+	when G_MAXLONG is passed as length.  
+
 2005-08-26  Matthias Clasen  <mclasen@redhat.com>
 
 	* gtk/updateiconcache.c: Add a separate --ignore-theme-index option
