Updated Catalan translation for gtk-2-6, just because I can.

--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-27  Jordi Mallach  <jordi@sindominio.net>
+
+	* ca.po: Updated Catalan translation.
+
 2005-08-18  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.6.10 ===
