--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-28 Ankit Patel <ankit644@yahoo.com>
+
+	* gu.po: Updated Gujarati Translation.
+
 2005-08-27  Jordi Mallach  <jordi@sindominio.net>
 
 	* ca.po: Updated Catalan translation by
