--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-28  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
+
+	* es.po: Updated Spanish translation.
+
 2005-08-27  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Updated French translation.
