Updated Brazilian Portuguese translation.
2005-08-28  Evandro Fernandes Giovanini <evandrofg@ig.com.br>

	* pt_BR.po: Updated Brazilian Portuguese translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-28  Evandro Fernandes Giovanini <evandrofg@ig.com.br>
+
+	* pt_BR.po: Updated Brazilian Portuguese translation.
+
 2005-08-28  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
 	* es.po: UPdated Spanish translation.
