Updated Catalan translation from HEAD.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-29  Jordi Mallach  <jordi@sindominio.net>
+
+	* ca.po: Updated Catalan translation from HEAD.
+
 2005-08-28  Evandro Fernandes Giovanini <evandrofg@ig.com.br>
 
 	* pt_BR.po: Updated Brazilian Portuguese translation.
