--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-08-29  Matthias Clasen  <mclasen@redhat.com>
+
+	* gdk/x11/gdkasync.c (_gdk_x11_get_window_child_info): Free 
+	state.children in all cases.  (#313862, Kjartan Maraas)
+
 2005-08-28  Matthias Clasen  <mclasen@redhat.com>
 
 	* po/POTFILES.in, po-properties/POTFILES.in:
