--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-29  Changwoo Ryu  <cwryu@debian.org>
+
+	* ko.po: Updated Korean translation.
+
 2005-08-29  Telsa Gwynne  <hobbit@aloss.ukuu.org.uk>
 
 	* cy.po: Updated Welsh translation.
